--- a/OurToday/OurToday/DiaryPage.xaml
+++ b/OurToday/OurToday/DiaryPage.xaml
@@ -5,13 +5,15 @@
     <NavigationPage.TitleView>
         <Label Text="오늘 우리"
                FontSize="Large"
-               TextColor="#ffffff"
-               HorizontalOptions="CenterAndExpand"/>
+               TextColor="#ffffff"/>
     </NavigationPage.TitleView>
     <ContentPage.Content>
-        <StackLayout>
-            <Label x:Name="title_label"/>
-            <Label x:Name="content_label"/>
+        <StackLayout Margin="10">
+            <Label x:Name="title_label"
+                   Margin="10"
+                   FontSize="Large"/>
+            <Label x:Name="content_label"
+                   Margin="10"/>
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
